# libbiosxx

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  README  README.mkd  clean  configure.ac
bios/: CMakeLists.txt  bed.cc  bed.hh  bedgraph.cc  bitfield.cc  blast.hh  blat.hh  bowtie.hh  conf.cc  conf.hh  elandmulti.cc  fasta.cc  geneontology.cc  interval.cc  interval.hh  linestream.cc  linestream.hh  seq.cc  seq.hh  string.cc  string.hh  worditer.cc
ci/: build.sh
lib/: Makefile.am
lib/bioinfo/: bed.cc  bed.h  bedgraph.cc  bedgraph.h  bedparser.cc  bedparser.h  bgrparser.cc  bgrparser.h  bitfield.cc  bitfield.h  blast.cc  blast.h  blastparser.cc  blastparser.h  blat.cc  blat.h  blatparser.cc  blatparser.h  bowtie.cc  bowtie.h  bowtieparser.cc  bowtieparser.h  common.cc  common.h  conf.cc  conf.h  eland.cc  eland.h  elandmulti.cc  elandmulti.h  elandmultiparser.cc  elandmultiparser.h  elandparser.cc  elandparser.h  exportpe.cc  exportpe.h  exportpeparser.cc  exportpeparser.h  fasta.cc  fasta.h  (+22 more)
lib/bios/: bed.cc  bed.hh  bedgraph.cc  bedgraph.hh  bitfield.cc  bitfield.hh  blast.cc  blast.hh  blat.cc  blat.hh  bowtie.cc  bowtie.hh  conf.cc  conf.hh  eland.cc  eland.hh  elandmulti.cc  elandmulti.hh  exportpe.cc  exportpe.hh  fasta.cc  fasta.hh  fastq.cc  fastq.hh  geneontology.cc  geneontology.hh  interval.cc  interval.hh  linestream.cc  linestream.hh  log.c  misc.cc  misc.hh  number.cc  number.hh  seq.cc  seq.hh  string.cc  string.hh  worditer.cc  (+1 more)
make/: doc.am  libbios.am  libbiospp.am  pkg.am  test.am
src/bios/: bed.cc  bed.hh  bedgraph.cc  bedgraph.hh  bitfield.cc  bitfield.hh  blast.cc  blast.hh  blat.cc  blat.hh  bowtie.cc  bowtie.hh  conf.cc  conf.hh  eland.cc  eland.hh  elandmulti.cc  elandmulti.hh  exportpe.cc  exportpe.hh  fasta.cc  fastq.cc  geneontology.cc  geneontology.hh  interval.cc  interval.hh  linestream.cc  linestream.hh  misc.cc  misc.hh  number.cc  number.hh  seq.hh  string.cc  string.hh  worditer.cc  worditer.hh
test/: bed_test.cc  linestream_test.cc  worditer_test.cc
test/in/: colorbystrand.bed  itemrgb.bed
