lib_LTLIBRARIES = libbioinfo.la
libbioinfo_la_SOURCES = \
			 bioinfo/array.c \
		     bioinfo/bed.cc \
		     bioinfo/bedgraph.cc \
		     bioinfo/bitfield.cc \
		     bioinfo/blast.cc \
		     bioinfo/blat.cc \
		     bioinfo/bowtie.cc \
		     bioinfo/common.c \
		     bioinfo/eland.cc \
		     bioinfo/elandmulti.cc \
		     bioinfo/exportpe.cc \
		     bioinfo/fasta.cc \
		     bioinfo/fastq.cc \
		     bioinfo/format.c \
		     bioinfo/geneontology.cc \
		     bioinfo/interval.cc \
		     bioinfo/hlrmisc.c \
		     bioinfo/linestream.c \
		     bioinfo/log.c \
			 bioinfo/misc.cc \
		     bioinfo/number.cc \
		     bioinfo/plabla.c \
		     bioinfo/seq.cc \
		     bioinfo/string.cc

libbioinfo_la_LIBADD = -lm -lgsl

nobase_dist_include_HEADERS = \
		  bioinfo/array.h \
		  bioinfo/bed.h \
		  bioinfo/bedgraph.h \
		  bioinfo/bitfield.h \
		  bioinfo/blast.h \
		  bioinfo/blat.h \
		  bioinfo/bowtie.h \
		  bioinfo/common.h \
		  bioinfo/eland.h \
		  bioinfo/elandmulti.h \
		  bioinfo/exportpe.h \
		  bioinfo/fasta.h \
		  bioinfo/fastq.h \
		  bioinfo/format.h \
		  bioinfo/geneontology.h \
		  bioinfo/hlrmisc.h \
		  bioinfo/interval.h \
		  bioinfo/linestream.h \
		  bioinfo/log.h \
		  bioinfo/mainpage.h \
		  bioinfo/misc.h \
		  bioinfo/number.h \
		  bioinfo/plabla_conf.h \
		  bioinfo/plabla.h \
		  bioinfo/seq.h \
		  bioinfo/string.h
