lib_LTLIBRARIES = libbioinfo.la
libbioinfo_la_SOURCES = \
		     bioinfo/bed.cc \
		     bioinfo/bedgraph.cc \
		     bioinfo/bitfield.cc \
		     bioinfo/blast.cc \
		     bioinfo/blat.cc \
		     bioinfo/bowtie.cc \
		     bioinfo/eland.cc \
		     bioinfo/elandmulti.cc \
		     bioinfo/exportpe.cc \
		     bioinfo/fasta.cc \
		     bioinfo/fastq.cc \
		     bioinfo/geneontology.cc \
		     bioinfo/interval.cc \
		     bioinfo/linestream.cc \
		     bioinfo/log.c \
			 bioinfo/misc.cc \
		     bioinfo/number.cc \
		     bioinfo/seq.cc \
		     bioinfo/string.cc \
			 bioinfo/worditer.cc

libbioinfo_la_LIBADD = -lm -lgsl

nobase_dist_include_HEADERS = \
		  bioinfo/bed.h \
		  bioinfo/bedgraph.h \
		  bioinfo/bitfield.h \
		  bioinfo/blast.h \
		  bioinfo/blat.h \
		  bioinfo/bowtie.h \
		  bioinfo/eland.h \
		  bioinfo/elandmulti.h \
		  bioinfo/exportpe.h \
		  bioinfo/fasta.h \
		  bioinfo/fastq.h \
		  bioinfo/geneontology.h \
		  bioinfo/interval.h \
		  bioinfo/linestream.h \
		  bioinfo/log.h \
		  bioinfo/mainpage.h \
		  bioinfo/misc.h \
		  bioinfo/number.h \
		  bioinfo/seq.h \
		  bioinfo/string.h \
		  bioinfo/worditer.h
