lib_LTLIBRARIES = libbios++.la
libbios___la_SOURCES = \
		     bios/bed.cc \
		     bios/bedgraph.cc \
		     bios/bitfield.cc \
		     bios/blast.cc \
		     bios/blat.cc \
		     bios/bowtie.cc \
			 bios/conf.cc \
		     bios/eland.cc \
		     bios/elandmulti.cc \
		     bios/exportpe.cc \
		     bios/fasta.cc \
		     bios/fastq.cc \
		     bios/geneontology.cc \
		     bios/interval.cc \
		     bios/linestream.cc \
		     bios/log.c \
			 bios/misc.cc \
		     bios/number.cc \
		     bios/seq.cc \
		     bios/string.cc \
			 bios/worditer.cc

libbios___la_LIBADD = -lm -lgsl

nobase_dist_include.hhEADERS = \
		  bios/bed.hh \
		  bios/bedgraph.hh \
		  bios/bitfield.hh \
		  bios/blast.hh \
		  bios/blat.hh \
		  bios/bowtie.hh \
		  bios/conf.hh \
		  bios/eland.hh \
		  bios/elandmulti.hh \
		  bios/exportpe.hh \
		  bios/fasta.hh \
		  bios/fastq.hh \
		  bios/geneontology.hh \
		  bios/interval.hh \
		  bios/linestream.hh \
		  bios/log.h \
		  bios/mainpage.hh \
		  bios/misc.hh \
		  bios/number.hh \
		  bios/seq.hh \
		  bios/string.hh \
		  bios/worditer.hh
